Revert "Fixed buttons being overlapped by divs, making them unable to be pressed"
This reverts commit 446b50184e05209212b8226abf88d206c6d8671f.

--- a/assets/stylesheets/lobby.css
+++ b/assets/stylesheets/lobby.css
@@ -171,9 +171,8 @@ p {
 	height: 100%;
 	width: 100%;
 	/*resize: none;*/
-	position: absolute;
+	/*position: absolute;*/
 	/*position: relative;	*/
-	top: 0px;
 }
 
 .room-container #mainRoomBox div {
@@ -420,11 +419,4 @@ p {
 input[type="text"] {
 	padding-left: 5px;
 	margin-top: 3px;
-}
-
-
-#backButton {
-	position: absolute;
-	top: 50px;
-	left: 0px;
 }
